# autochess

./: .gitignore  README.md  pyproject.toml
analysis/: general.ipynb
autochess/: piece.py  player.py  pool.py  refernece.py  unit.py
resources/: reroll probabilities.csv
tests/: test_autochess.py
