[tool.poetry]
name = "autochess"
version = "0.1.0"
description = ""
authors = ["Nutchanon Ninyawee  <dev@nutchanon.org>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.24.1"
lxml = "^4.3"
html5lib = "^1.0"
BeautifulSoup4 = "^4.7"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
jupyter = "^1.0"
plotly = "^3.7"
ipywidgets = "^7.4"
notebook = "^5.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
